[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "s1etad"
authors = [
    {name = "Nuno Miranda"},
    {name = "Antonio Valentino"},
    {email = "s1etad@esa.int"},
]
description = "Reader for Sentinel-1 Extended Timing Annotation Dataset"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
keywords = [
    "sentinel", "copernicus", "esa", "remote-sensing", "satellite-imagery"
]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "lxml",
    "netCDF4",
    "pandas",
    "shapely>=1.8",
    "pymap3d",
]
dynamic = ["version"]


[project.optional-dependencies]
kmz = ["simplekml", "gdal", "matplotlib"]
ql = ["gdal", "matplotlib"]
cli = ["argcomplete"]
all = ["s1etad[kmz]", "s1etad[ql]", "s1etad[cli]"]


[project.scripts]
s1etad-cli = "s1etad.cli.main:main"


[project.urls]
Homepage = "https://github.com/s1tools/s1-etad"
Documentation = "https://s1etad.readthedocs.io"
Repository = "https://github.com/s1tools/s1-etad"
Changelog = "https://github.com/s1tools/s1-etad/blob/main/CHANGELOG.rst"
Issues = "https://github.com/s1tools/s1-etad/issues"


[tool.setuptools]
packages = ["s1etad", "s1etad.cli"]


[tool.setuptools.dynamic]
version = {attr = "s1etad.__version__"}


[tool.pytest.ini_options]
addopts = "--ignore=examples/"
markers = [
    "network: marks tests that require internet access (via pooch)",
]


[tool.black]
line-length = 79
# target-version = ['py311']


[tool.isort]
profile = "black"
length_sort = true
no_inline_sort = true
include_trailing_comma = true
use_parentheses = true
line_length = 79


[tool.pydocstyle]
add-ignore = ["D105"]
# add-ignore = ["D105", "D107"]
match='(?!(test_|_s1utils|conf)).*\.py'


[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]


[tool.ruff]
line-length = 79
# indent-width = 4
# target-version = "py39"
extend-exclude = ["docs/conf.py"]


[tool.ruff.lint]
extend-ignore = [
    "D105",     # D105 Missing docstring in magic method
    "D107",     # D107 Missing docstring in `__init__`
    "D203",     # D203 1 blank line required before class docstring
    "D213",     # D213 Multi-line docstring summary should start at the second line
    "PLR2004",  # PLR2004 Magic value used in comparison, consider replacing 2 with a constant variable
    "PLR0913",  # PLR0913 Too many arguments in function definition
    "RET504",   # RET504 Unnecessary assignment before `return` statement
    "RET505",   # RET505 Unnecessary `elif` after `return` statement
]


[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["D"]


[tool.ruff.lint.isort]
length-sort = true
