[metadata]
name = s1etad
version = attr: s1etad.__version__
description = Reader for Sentinel-1 Extended Timing Annotation Dataset
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://gitlab.com/nuno.miranda/s1-etad
keywords = sentinel, copernicus, esa, remote-sensing, satellite-imagery
license = MIT License
license_file = LICENSE.txt
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
zip_safe = True
# include_package_data = True
py_modules = s1etad
# scripts =
#    bin/first.py
install_requires =
    numpy
    scipy
    lxml
    netCDF4
    pandas
    python-dateutil
    shapely
    simplekml
python_requires = >=3.6

[bdist_wheel]
universal = 1
