[metadata]
name = s1etad
version = attr: s1etad.__version__
description = Reader for Sentinel-1 Extended Timing Annotation Dataset
long_description = file: README.rst
url = https://gitlab.com/nuno.miranda/s1-etad
keywords = sentinel, copernicus, esa, remote-sensing, satellite-imagery
license = MIT License
license_file = LICENSE.txt
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://gitlab.com/nuno.miranda/s1-etad/-/issues
    Documentation = https://s1etad.readthedocs.io
    Source Code = https://gitlab.com/nuno.miranda/s1-etad
    Changelog = https://gitlab.com/nuno.miranda/s1-etad/-/blob/master/CHANGELOG.rst

[options]
zip_safe = True
# include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
    lxml
    netCDF4
    pandas
    shapely
python_requires = >=3.6
entry_points =
    [console_scripts]
    s1etad-cli = s1etad.cli.main:main

[options.extras_require]
kmz =
    simplekml
    gdal
    matplotlib
cli =
    argcomplete
docs =
    sphinx
    nbsphinx

[bdist_wheel]
universal = 1
